# twf

./: .gitignore  Cargo.toml  DEMO_RECORDING.md  LICENSE  README.md  record_demo.sh  screenshot_output.txt
.kiro/hooks/: update-docs-on-change.kiro.hook
.kiro/specs/twfit/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: japanese-language.md  spec-format.md
examples/: test_bash_config.rs
scripts/: generate_demo_svg.py
src/: cli.rs  lib.rs  main.rs
src/analyzer/: color.rs  contrast.rs  image.rs  mod.rs
src/applier/: backup.rs  mod.rs  rollback.rs  shell.rs
src/detector/: alacritty.rs  auto.rs  bg_color.rs  gnome_terminal.rs  iterm2.rs  kitty.rs  mod.rs  terminal.rs  wezterm.rs  windows_terminal.rs
src/generator/: font.rs  mod.rs  scheme.rs
src/models/: mod.rs
src/preview/: mod.rs
src/utils/: color_space.rs  file.rs  mod.rs
tests/: error_tests.rs
tests/integration/: .gitkeep  auto_detection_tests.rs  end_to_end_tests.rs
tests/property/: .gitkeep  ansi_colors_completeness.proptest-regressions  ansi_colors_completeness.rs  background_image_detection.rs  bg_color_scheme_generation.proptest-regressions  bg_color_scheme_generation.rs  color_operations.proptest-regressions  color_operations.rs  color_space_roundtrip.proptest-regressions  color_space_roundtrip.rs  config_roundtrip.proptest-regressions  config_roundtrip.rs  contrast_ratio.rs  contrast_ratio_guarantee.proptest-regressions  contrast_ratio_guarantee.rs  font_weight_selection.rs  image_analysis_test.rs  osc11_response_parsing.rs  palette_256_completeness.rs  shell_config_path.rs  terminal_detection.rs
